<resources>
    <string name="app_name">Blindspot</string>
    <string name="txtNome">Nome:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtSenha">Senha:</string>
    <string name="txtEsqSenha">Esqueceu sua senha?</string>
    <string name="txtCriarConta">Não possui conta? Crie uma</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtCadastro">CADASTRO</string>
    <string name="txtTCnome">Nome:</string>
    <string name="txtTCEmail">Senha:</string>
    <string name="txtTCSenha">Repita sua senha:</string>
    <string name="txtTCConfirSenha">Confirme sua senha:</string>
    <string name="txtTCPossuiLog">Já possui uma conta? Login</string>
    <string name="txtBlindSpot">Blindspot</string>
    <string name="txtAventure">Aventure-se nos casos!</string>
    <string name="txt_explore_telaaventura">EXPLORE</string>
    <string name="txt_perfil_telaprofile">Perfil</string>
    <string name="text_nome_telaprofile">Mônica Sousa Silva</string>
    <string name="text_email_telaprofile">mocsilva@gmail.com</string>
    <string name="text_btnediprofile">Editar perfil</string>
    <string name="text_labelnome_telaprofile">Nome</string>
    <string name="text_labelemail_telaprofile">Email</string>
    <string name="text_labelsenha_telaprofile">Senha</string>
    <string name="text_valornome">Mônica Sousa Silva</string>
    <string name="text_valoremail_telaprofile">mcsilva@gmail.com</string>
    <string name="text_valorsenha_telaprofile">************</string>
    <string name="text_saibaperson_telapers">Saiba mais sobre eles!</string>
    <string name="text_casossol_telacs">Casos Solucionados</string>
    <string name="text_recentes_telacs">Recente</string>
    <string name="text_ep1_telaexcs">Episódio 1 - Piloto</string>
    <string name="text_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod porttitor venenatis. Nulla egestas dignissim lorem, ac egestas enim euismod in. Vivamus porttitor nulla vel tempus pellentesque. Etiam tempor sagittis accumsan. Vivamus nec convallis lacus. Donec augue nulla, sagittis ut sem quis, convallis elementum lacus. Pellentesque malesuada imperdiet justo at hendrerit.</string>
    <string name="text_ep11_excns">Episódio 11 - Ienne Ennui</string>
    <string name="text_loccrime">Localização do crime</string>
    <string name="text_elenco_tp">Elenco</string>
    <string name="text_investigue_telasensor">Investigue!</string>
    <string name="text_ligar_sensor">LIGAR</string>
    <string name="text_perm_loc">Verificar minha localização</string>
    <string name="text_envie_loc">Envie minha localização</string>
    <string name="text_patterson">para Patterson</string>
    <string name="text_conta">Não possui conta?</string>
    <string name="text_login">Já possui conta?</string>
    <string name="text_ola">Olá Monica silva!</string>
    <string name="text_pesq">Mais pesquisados</string>
    <string name="text_jane">Jane Doe-Weller é uma ex-consultora do FBI e ex-terrorista que foi colocada no Grupo de Resposta a Incidentes Críticos, liderado por Kurt Weller, para auxiliar em seu próprio caso de investigação, onde ela ajudou continuamente a equipe a resolver os casos relacionados a suas tatuagens. Ela é a personagem central da série, e é retratada como a protagonista de Blindspot da NBC. Jane descobre e gerencia efetivamente suas habilidades de combate avançadas únicas para ajudar sua equipe a impedir ocurso de operações ilegais destacadas em suas tatuagens por uma organização terrorista</string>
    <string name="text_reade">Quando criança, Reade era um campista no Mulmur Hills Football Camp, onde fez amizade com o treinador Jones, que mais tarde se tornou estuprador. Mais tarde, ele frequentou a Universidade de Michigan. Onde ele ainda detém um recorde de recepção no futebol.  Estava implícito que Reade poderia ter sido o primeiro agente trabalhando ao lado de Weller e Patterson como parte da divisão CIRG liderada por Bethany Mayfair.</string>
    <string name="text_escolha">Escolha o que deseja fazer</string>
    <string name="text_tituevi">Nos envie as envidências!</string>
    <string name="text_situ">Selecione a situação</string>
    <string name="text_envi">Denuncia enviada com Sucesso</string>
    <string name="mode">Deseja privacidade?</string>
    <string name="princ">Principais casos</string>
    <string name="hintfoto">Descreva o crime</string>
</resources>
